<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/artist_menu"
            style="@style/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/artist_menu"
            android:src="@drawable/artists" />

        <ImageView
            android:id="@+id/songs_menu"
            style="@style/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/song_menu"
            android:src="@drawable/songs" />

        <ImageView
            android:id="@+id/play_menu"
            style="@style/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/play_menu"
            android:src="@drawable/play_active" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="500dp">

        <ImageView
            android:id="@+id/artist_cover"
            style="@style/imageStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/evanescence" />

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/montserrat"
            android:text="Evanescence"
            android:textColor="@color/textColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/artist_name"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/dosis"
            android:text="Bring Me to Life"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="117dp"
            android:layout_marginLeft="@dimen/timer_margins"
            android:layout_marginRight="@dimen/timer_margins"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dosis"
                android:text="0:00"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <SeekBar
                android:id="@+id/seekbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="100"
                android:maxHeight="3dp"
                android:minHeight="3dp"
                android:progressBackgroundTint="@color/textColor"
                android:progressTint="@color/textColor"
                android:thumbTint="@color/textColor" />

            <TextView
                android:id="@+id/end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dosis"
                android:text="4:37"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/menu_margins"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/previus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/previous"
                android:src="@drawable/previus" />

            <ImageView
                android:id="@+id/play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/play" />

            <ImageView
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/next"
                android:src="@drawable/next" />

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>